# Primitives

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  point.h  segment.cpp  segment.h
lib/: CMakeLists.txt
src/: main.cpp
